# nnt.cross

./: CMakeLists.txt  README.md
android/: .gitignore  build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/nnt/cross/: MainActivity.kt
android/app/src/main/java/com/nnt/nlua/: MainActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/raw/: test0.lua  test1.lua
android/cross/: build.gradle
android/cross/src/: CMakeLists.txt  test.cpp
android/cross/src/main/: AndroidManifest.xml
android/cross/src/main/java/com/nnt/nlua/: Context.kt  Variant.kt
cross/: CMakeLists.txt  android-prv.cpp  android-prv.hpp  android.cpp  android.hpp  android_link.cpp  connector.cpp  connector.hpp  connector_boost.cpp  connector_boost.hpp  connector_curl.cpp  connector_curl.hpp  connector_jni.cpp  connector_jni.hpp  connector_lws.cpp  connector_lws.hpp  connector_objc.hpp  connector_objc.mm  cross.cpp  cross.sln  datetime.cpp  datetime.hpp  digest.cpp  digest.hpp  digest.mm  fs.cpp  fs.hpp  fs.mm  json.cpp  json.hpp  json.mm  logger.cpp  logger.hpp  logger.mm  macro.hpp  memory.hpp  objc.hpp  objc.mm  property.cpp  property.hpp  (+19 more)
cross/AFNetworking/AFNetworking.xcodeproj/: project.pbxproj
cross/ajni++/: Android.mk  CMakeLists.txt  ajni++.hpp  android-prv.cpp  android-prv.hpp  android.cpp  android.hpp  ast.cpp  ast.hpp  inspect.cpp  inspect.hpp  java-prv.cpp  java-prv.hpp  jnienv.cpp  jnienv.hpp  jre.cpp  jre.hpp  kotlin.cpp  kotlin.hpp  macro.hpp  must_link.cpp  variant.cpp  variant.hpp
cross/jsoncpp/: Android.mk  CMakeLists.txt
cross/libcross/: libcross.cpp  libcross.vcxproj  libcross.vcxproj.filters
cross/md5/: CMakeLists.txt
cross/minizip/: unzip.c
cross/test/: test.cpp  test.vcxproj
cross/tinyxml2/: CMakeLists.txt  tinyxml2.cpp
mac/: test.h  test.mm
mac/cross-ios/cross-ios/: cross_ios.h
mac/cross-ios/cross-ios.xcodeproj/: project.pbxproj
mac/cross-macos/cross-macos/: Info.plist  cross_macos.h
mac/cross-macos/cross-macos.xcodeproj/: project.pbxproj
mac/cross.xcworkspace/: contents.xcworkspacedata
mac/test-ios/test-ios/: AppDelegate.swift  ContentView.swift  Info.plist  SceneDelegate.swift
mac/test-ios/test-ios.xcodeproj/: project.pbxproj
mac/test-macos/test-macos/: main.swift  test.mm
mac/test-macos/test-macos.xcodeproj/: project.pbxproj
msvc/: cross.sln
msvc/libcross/: libcross.vcxproj  libcross.vcxproj.filters
msvc/test/: .gitignore  test.vcxproj  test.vcxproj.filters
src/: code.h  code.hpp  com++.h  com++.hpp  connector.cpp  connector.h  connector.hpp  connector_curl.cpp  connector_curl.h  connector_curl.hpp  connector_jni.cpp  connector_jni.hpp  connector_lws.cpp  connector_lws.h  connector_lws.hpp  cross.cpp  cross.h  cross.hpp  datetime.cpp  datetime.h  digest.cpp  fs.cpp  fs.h  fs.hpp  json.cpp  json.h  json.hpp  jsonobj.cpp  jsonobj.hpp  logger.cpp  logger.h  logger.hpp  macro.h  macro.hpp  memory.hpp  property.cpp  property.h  property.hpp  str.cpp  str.h  (+20 more)
src/jsoncpp/: CMakeLists.txt  json_reader.cpp  json_value.cpp  json_writer.cpp
src/md5/: md5.cpp  md5.h
src/minizip/: CMakeLists.txt  ioapi.c  ioapi_mem.c  ioapi_mem.h  unzip.c  unzip.h
src/tinyxml2/: tinyxml2.cpp
test/: test.cpp
